# myyrakle

./: README.md  setting.json
dist.config/: Cargo.toml  package.json  tsconfig.json
editor.config/: keybindings.json  setting.json
etc/: git.config.sh
reference/: agent.md  cline.md
regexp/: korean
